--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,9 @@
         android:theme="@style/Theme.Projet20"
         android:usesCleartextTraffic="true">
 
-        <meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyBDxZlj-wQXgfWbtdUrncZmbfsOv85JWok"/>
+        <meta-data android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyBDxZlj-wQXgfWbtdUrncZmbfsOv85JWok"/>
+
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name">
